--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,10 +4,12 @@
     <title>Google Auth Example App</title>
     <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
     <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+    <!-- <link rel="stylesheet" href="jquery-ui.min.css"> -->
     <%= csrf_meta_tags %>
   </head>
   <body>
     <%= render "partials/navbar" %>
+    <%= render "partials/searchbar" %>
     <div>
     <%= yield %>
     </div>
