fixed style issues

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -118,7 +118,7 @@ margin-right: 12px;
   background-color: #efefef;
 }
 .bitcoin{
-  background-color: gold;
+  background-color: #F3C022;
   font-size: 80px;
 }
 
