--- a/app/views/partials/_bitcoin.html.erb
+++ b/app/views/partials/_bitcoin.html.erb
@@ -1,8 +1,8 @@
 <div class="col-md-3">
     <div class="profile-nav alt">
         <section class="panel text-center">
-            <div class="user-heading alt wdgt-row bitcoin">
-                <i class="fa fa-btc"></i>
+            <div class="user-heading alt bitcoin">
+                <i class="fa fa-btc fa-4"></i>
             </div>
 
             <div class="panel-body">
